moved some stuff, starting posts

--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,9 +1,12 @@
-#navbar {
+  #navbar {
+    display:flex;
     background-color: #333; /* Black background color */
     position: fixed; /* Make it stick/fixed */
     top: 0; /* Stay on top */
     width: 100%; /* Full width */
     transition: top 0.3s; /* Transition effect when sliding down (and up) */
+    flex: 1;
+    justify-content: center;
   }
   
   /* Style the navbar links */
