--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,11 @@
 }
 body {
   height: 100%;
-  background-color: #383d49;
+  /* background-color: #383d49; */
+  background-color: #4D5366;
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
