--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -9,7 +9,8 @@
     flex: 1;
     justify-content: center;
     align-items: center;
-    /* margin-left: 15%; */
+    height: 51px;
+    flex-flow: wrap;
   }
   
   /* Style the navbar links */
