--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,36 @@
   margin: 0;
   padding: 0;
 }
+
 body {
   height: 100%;
   /* background-color: #383d49; */
-  background-color: #4D5366;
+  /* background-color: #4D5366; */
+  background: #c2d2e9;
+}
+
+.navDots {
+  background-color: black;
+  display: inline-block;
+  position: sticky;
+  height: 15px;
+  width: 15px;
+  left: 50px;
+  border-radius: 2em;
+  border: 2px solid white;
+  /* margin-bottom: 25px; */
+}
+
+@media only screen and (max-width: 575px) {
+  .navDots {
+    left: 25px;
+  }
+}
+
+.selected {
+  /* background-color: #21589d; */ 
+  background: rgb(255,255,255);
+  background: radial-gradient(circle, rgba(255,255,255,0.1) 0%, rgba(33,88,157,1) 50%); 
 }
 
 .App-header {
