--- a/src/App.css
+++ b/src/App.css
@@ -5,21 +5,18 @@
 
 body {
   height: 100%;
-  /* background-color: #383d49; */
-  /* background-color: #4D5366; */
   background: #c2d2e9;
 }
 
 .navDots {
-  background-color: black;
+  background: rgba(33,88,157,1);
   display: inline-block;
-  position: sticky;
+  position: fixed;
   height: 15px;
   width: 15px;
   left: 50px;
   border-radius: 2em;
   border: 2px solid white;
-  /* margin-bottom: 25px; */
 }
 
 @media only screen and (max-width: 575px) {
@@ -30,7 +27,7 @@ body {
 
 .selected {
   /* background-color: #21589d; */ 
-  background: rgb(255,255,255);
+  background: rgba(33,88,157,1);
   background: radial-gradient(circle, rgba(255,255,255,0.1) 0%, rgba(33,88,157,1) 50%); 
 }
 
