nav-ing on dots

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -5,7 +5,8 @@
     position: relative;
     top: 15vh;
     margin-left: 15%;
-    height: 40%;
+    margin-bottom: 40em;
+    height: 70%;
     width: 70%;
     background-color: #222222;
     display: flex;
