--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,12 +1,3 @@
-.carousel {
-    height: 40%;
-}
-
-.carousel.carousel-slider {
-    margin-left:15%;
-}
-
-.helpMe {
-    height: 250px;
-    width: 550px;
+.BrainhubCarousel__arrows {
+    background-color: #5e83ba !important;
 }
