--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -5,12 +5,13 @@
     position: relative;
     top: 15vh;
     margin-left: 15%;
-    margin-bottom: 40em;
+    margin-bottom: 30em;
     height: 70%;
     width: 70%;
-    background-color: #222222;
+    background-color: #3a4e7a;
     display: flex;
     align-items: flex-start;
+    border: 1px solid white;
 }
 
 #profile {
