--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -12,9 +12,11 @@
     display: flex;
     align-items: flex-start;
     border: 1px solid white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 6px 20px 0 rgba(0, 0, 0, 1);
 }
 
 #profile {
+    border: 1px solid white;
     border-radius: 1em;
     margin-right: 1em;
     z-index: 99;
