--- a/src/App.css
+++ b/src/App.css
@@ -22,16 +22,29 @@ body {
   background: #5e83ba;
   display: inline-block;
   position: fixed;
-  height: 15px;
-  width: 15px;
+  height: 20px;
+  width: 20px;
   left: 50px;
   border-radius: 2em;
   border: 2px solid #f1f1f0;
 }
 
+.navDots > a{
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+}
+
 @media only screen and (max-width: 575px) {
   .navDots {
     left: 25px;
+    height: 15px;
+    width: 15px;
+  }
+
+  .navDots > a{
+    height: 15px;
+    width: 15px;
   }
 }
 
