--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,5 +1,7 @@
 .BrainhubCarousel__arrows {
     background-color: #5e83ba !important;
+    display: inline-block;
+    border-radius: 2em !important;
 }
 
 .carouselItem {
@@ -7,7 +9,7 @@
     flex-flow: wrap;
     justify-content: center;
     align-items: flex-start;
-    height: 25em;
+    height: 27em;
     width: 45em;
     background-color: #3a4e7a;
     box-shadow: inset 2px 5px 10px black;
@@ -17,7 +19,7 @@
 .carouselItem > img {
     height: 250px;
     width: 550px;
-    margin-top: 1em;
+    margin-top: 2em;
     margin-left: 0.25em;
     border-radius: 1em;
     background-color: white;
@@ -27,4 +29,5 @@
 .carouselItem > p {
     /* margin-left: 4em; */
     max-width: 500px;
+    /* padding-bottom: 1em; */
 }
