--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -24,7 +24,7 @@
     border-radius: 1em;
     background-color: white;
     padding: 1em;
-    /* border: 2px solid black; */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.35), 0 6px 20px 0 rgba(0, 0, 0, 0.35);
 }
 
 .carouselItem > p {
