--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,6 @@
 */
 
 * {
-  font-weight: 600;
-  letter-spacing: 0.03em;
   margin: 0;
   padding: 0;
   color: #f1f1f0;
@@ -29,12 +27,14 @@ body {
   left: 50px;
   border-radius: 2em;
   border: 2px solid #f1f1f0;
+  /* text-indent: -9999px; */
 }
 
 .navDots > a{
   display: inline-block;
   height: 20px;
   width: 20px;
+  color: transparent;
 }
 
 @media only screen and (max-width: 575px) {
