--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -4,10 +4,11 @@
     border-radius: 1em;
     position: relative;
     top: 15vh;
-    margin-left: 15%;
+    /* margin-left: 15%; */
+    /* margin-right: 10em; */
     margin-bottom: 25em;
     height: 70%;
-    width: 70%;
+    width: 100%;
     background-color: #3a4e7a;
     display: flex;
     align-items: flex-start;
