renaming project components

--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -12,10 +12,12 @@
 
 .carouselItem {
     height: 15em;
-    /* width: 100%; */
+    width: 45em;
     display: flex;
+    flex-direction: column;
     flex-flow: wrap;
-    justify-content: center;
+    justify-content: space-around;
+    align-content: space-evenly;
     align-items: flex-start;
     background-color: #3a4e7a;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 6px 20px 0 rgba(0, 0, 0, 1);
@@ -25,6 +27,8 @@
 .hasImg {
     height: 29em;
     width: 45em;
+    align-items: flex-start;
+    align-content: stretch;
 }
 
 .carouselItem > img {
@@ -38,13 +42,15 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.35), 0 6px 20px 0 rgba(0, 0, 0, 0.35);
 }
 
-.carouselItem > h1 {
+.carouselItem > h2 {
     margin-top: 0.5em;
-    margin-right: 1em;
+    align-self: flex-start;
+    /* margin-right: 1em; */
 }
 
 .carouselItem > p {
-    max-width: 500px;
+    max-width: 575px;
+    /* margin-left: 4em; */
     /* margin-bottom: 1em; */
 }
 
