--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -8,7 +8,7 @@
     /* margin-right: 10em; */
     margin-bottom: 25em;
     height: 70%;
-    width: 100%;
+    width: 70%;
     background-color: #3a4e7a;
     display: flex;
     align-items: flex-start;
@@ -25,16 +25,26 @@
     width: 17em;
     margin-left: 2em;
     margin-top: 2em;
+    margin-bottom: 2em;
     background-color: white;
 }
 
 .bio {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     position: relative;
-    /* max-width: 70%; */
+    height: 17em;
+    max-width: 100%;
+    /* margin-right: 2em; */
     max-height: 20em;
     overflow: hidden;
     margin-top: 2em;
     color: white;
+}
+
+.bio p {
+    margin-right: 2em;
 }
 
 @media only screen and (min-width:1525px) {
@@ -92,13 +102,14 @@
 }
 
 .contactSocial {
+    /* align-self: flex-end; */
     align-content: center;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     position: relative; 
     display: flex;
-    margin-top: 0.55em;
-    margin-bottom: 0.75em;
+    /* margin-top: 5em; */
+    /* margin-bottom: 0.75em; */
     color: white;
 }
 
