--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,11 @@ body {
   color: transparent;
 }
 
+.navDots :hover {
+  padding-left: 2em;
+  color: white;
+}
+
 @media only screen and (max-width: 575px) {
   .navDots {
     left: 25px;
