--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -8,7 +8,7 @@
     /* margin-right: 10em; */
     margin-bottom: 25em;
     height: 70%;
-    width: 70%;
+    /* width: 70%; */
     background-color: #3a4e7a;
     display: flex;
     align-items: flex-start;
