working on nav dots

--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -5,9 +5,9 @@
 }
 
 .carousel {
-    margin-bottom:"20em";
-    width: '100%';
-    position: 'relative';
+    margin-bottom: 20em;
+    width: 100%;
+    position: relative;
 }
 
 .carouselItem {
