--- a/src/components/navDot/navDot.css
+++ b/src/components/navDot/navDot.css
@@ -6,7 +6,7 @@
     height: 20px;
     width: 20px;
     left: 50px;
-    border-radius: 2em;
+    border-radius: 2rem;
     border: 2px solid #f1f1f0;
     /* text-indent: -9999px; */
   }
@@ -19,7 +19,7 @@
   }
   
   .navDots :hover {
-    padding-left: 2em;
+    padding-left: 2rem;
     color: white;
   }
   
