--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -1,18 +1,18 @@
 .BrainhubCarousel__arrows {
     background-color: #5e83ba !important;
     display: inline-block;
-    border-radius: 2em !important;
+    border-radius: 2rem !important;
 }
 
 .carousel {
-    margin-bottom: 20em;
+    margin-bottom: 20rem;
     width: 100%;
     position: relative;
 }
 
 .carouselItem {
-    height: 15em;
-    width: 45em;
+    height: 15rem;
+    width: 45rem;
     display: flex;
     flex-direction: column;
     flex-flow: wrap;
@@ -21,12 +21,12 @@
     align-items: flex-start;
     background-color: #3a4e7a;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 6px 20px 0 rgba(0, 0, 0, 1);
-    border-radius: 1em;
+    border-radius: 1rem;
 }
 
 .hasImg {
-    height: 29em;
-    width: 45em;
+    height: 29rem;
+    width: 45rem;
     align-items: flex-start;
     align-content: stretch;
 }
@@ -34,24 +34,22 @@
 .carouselItem > img {
     height: 250px;
     width: 550px;
-    margin-top: 2em;
-    margin-left: 0.25em;
-    border-radius: 1em;
+    margin-top: 2rem;
+    margin-left: 0.25rem;
+    border-radius: 1rem;
     background-color: white;
-    padding: 1em;
+    padding: 1rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.35), 0 6px 20px 0 rgba(0, 0, 0, 0.35);
 }
 
 .carouselItem > h2 {
-    margin-top: 0.5em;
+    margin-top: 0.5rem;
     align-self: flex-start;
-    /* margin-right: 1em; */
+    /* margin-right: 1rem; */
 }
 
 .carouselItem > p {
-    max-width: 575px;
-    /* margin-left: 4em; */
-    /* margin-bottom: 1em; */
+    max-width: 80%;
 }
 
 .fa-arrow-circle-right {
@@ -68,4 +66,23 @@
 
 .fa-arrow-circle-left > path {
     fill:#5e83ba;
+}
+
+@media only screen and (max-width:1100px) {
+    .hasImg {
+        height: 32rem;
+        width: 80%;
+    }
+}
+
+@media only screen and (max-width:700px) {
+    .hasImg {
+        height: 36rem;
+    }
+}
+
+@media only screen and (max-width:550px) {
+    .hasImg {
+        height: 40rem;
+    }
 }
