--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -43,6 +43,26 @@
     margin-right: 2rem;
 }
 
+.contactSocial {
+    /* align-self: flex-end; */
+    align-content: center;
+    align-items: center;
+    justify-content: flex-start;
+    position: relative; 
+    display: flex;
+    /* margin-top: 5rem; */
+    /* margin-bottom: 0.75rem; */
+    color: white;
+}
+
+.contactSocial > p {
+    margin-right: 0.5rem;
+}
+
+.contactSocial > img {
+    margin-right: 1rem;
+}
+
 @media only screen and (min-width:1525px) {
     .bio {
         max-width: 70%;
@@ -56,6 +76,10 @@
 }
 
 @media only screen and (max-width: 925px) {
+    .contactContainer {
+        top: 10vh;
+        margin-bottom: 20rem;
+    }
     .bio {
         margin-left: 8rem;
         margin-bottom: 2rem;
@@ -95,24 +119,4 @@
     .contactSocial {
         margin-left: 2rem;
     }
-}
-
-.contactSocial {
-    /* align-self: flex-end; */
-    align-content: center;
-    align-itrems: center;
-    justify-content: flex-start;
-    position: relative; 
-    display: flex;
-    /* margin-top: 5rem; */
-    /* margin-bottom: 0.75rem; */
-    color: white;
-}
-
-.contactSocial > p {
-    margin-right: 0.5rem;
-}
-
-.contactSocial > img {
-    margin-right: 1rem;
 }
