--- a/src/components/navDot/navDot.css
+++ b/src/components/navDot/navDot.css
@@ -23,6 +23,12 @@
     color: white;
   }
   
+  @media only screen and (max-width: 1000px) {
+    .navDots :hover {
+      color: transparent;
+    }
+  }
+
   @media only screen and (max-width: 575px) {
     .navDots {
       left: 25px;
