--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -76,6 +76,13 @@
 }
 
 @media only screen and (max-width: 925px) {
+    #profile {
+        margin: 0;
+        margin-top: 1rem;
+        margin-left: 8rem;
+        align-self: center;
+        justify-self: center;
+    }
     .contactContainer {
         top: 10vh;
         margin-bottom: 20rem;
@@ -85,38 +92,46 @@
         margin-bottom: 2rem;
         max-width: 60%;
     }
-    img {
-        margin-left: 10rem;
-    }
-    .contactSocial {
-        margin-left: 8rem;
-    }
 }
 
 @media only screen and (max-width: 775px) {
+    #profile {
+        margin-left: 6rem;
+    }
     .bio {
-        margin-left: 2rem;
+        margin-left: 6rem;
         margin-bottom: 2rem;
         max-width: 80%;
     }
-    img {
-        margin-left: 5rem;
+}
+
+@media only screen and (max-width: 700px) {
+    #profile {
+        margin-left: 4em;
     }
-    .contactSocial {
-        margin-left: 4rem;
+    .bio {
+        margin-left: 4em;
     }
 }
 
 @media only screen and (max-width: 575px) {
+    #profile {
+        margin-left: 2rem;
+    }
     .bio {
         margin-left: 2rem;
         margin-bottom: 2rem;
         max-width: 80%;
     }
-    img {
-        margin-left: 3rem;
+}
+
+@media only screen and (max-width: 500px)  {
+    #profile {
+        margin-left: 1em;
+        margin-right: 1em;
     }
-    .contactSocial {
-        margin-left: 2rem;
+    .bio {
+        margin-left: 1em;
+        margin-right: 1em;
     }
 }
