--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -103,6 +103,12 @@
     }
 }
 
+@media only screen and (max-width: 500px) {
+    .carousel {
+        width: unset;
+    }
+}
+
 @media only screen and (max-width:450px) {
     .hasImg {
         height: 42rem;
