--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -106,6 +106,9 @@
 }
 
 @media only screen and (max-width: 700px) {
+    .contactContainer {
+        margin-bottom: 12rem;
+    }
     #profile {
         margin-left: 4em;
     }
