--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -7,7 +7,6 @@
 
 .BrainhubCarouselItem {
     padding: 1em;
-    /* padding-top: 0; */
 }
 
 .carousel {
@@ -41,7 +40,6 @@
     height: 250px;
     width: 550px;
     margin-top: 2rem;
-    margin-left: 0.25rem;
     border-radius: 1rem;
     background-color: white;
     padding: 1rem;
@@ -51,7 +49,6 @@
 .carouselItem > h2 {
     margin-top: 0.5rem;
     align-self: flex-start;
-    /* margin-right: 1rem; */
 }
 
 .carouselItem > p {
@@ -88,16 +85,51 @@
     }
 }
 
+@media only screen and (max-width: 1100px) {
+    .carouselItem {
+        margin-right: 0.1em;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .hasImg > img {
+        width: 450px;
+    }
+}
+
+@media only screen and (max-width: 725px) {
+    .hasImg > img {
+        width: 350px;
+    }
+}
+
 @media only screen and (max-width:700px) {
     .hasImg {
         height: 36rem;
     }
+    .carousel {
+        margin-bottom: 8rem;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .carouselItem {
+        height: 20rem;
+    }
+    .BrainhubCarouselItem {
+        padding: 4em;
+        padding-top: 0.5em;
+    }
+    .carousel {
+        width: 110%;
+    }
+    .hasImg > img {
+        padding: 5px;
+        width: 270px;
+    }
 }
 
 @media only screen and (max-width:550px) {
-    .carousel {
-        width: 50rem;
-    }
     .hasImg {
         height: 40rem;
     }
@@ -105,7 +137,7 @@
 
 @media only screen and (max-width: 500px) {
     .carousel {
-        width: unset;
+        width: 120%;
     }
 }
 
@@ -115,3 +147,8 @@
     }
 }
 
+@media only screen and (max-width: 375px) {
+    .carouselItem {
+        /* height: 22rem; */
+    }
+}
