--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -1,161 +1,157 @@
 .BrainhubCarousel__arrows {
-    background-color: #5e83ba !important;
-    display: inline-block;
-    border-radius: 2rem !important;
-    
+  background-color: #5e83ba !important;
+  display: inline-block;
+  border-radius: 2rem !important;
 }
 
 .BrainhubCarouselItem {
-    padding: 1em;
+  padding: 1em;
 }
 
 .carousel {
-    margin-bottom: 20rem;
-    width: 100%;
-    position: relative;
+  margin-bottom: 20rem;
+  width: 100%;
+  position: relative;
 }
 
 .carouselItem {
-    height: 15rem;
-    width: 45rem;
-    display: flex;
-    flex-direction: column;
-    flex-flow: wrap;
-    justify-content: space-around;
-    align-content: space-evenly;
-    align-items: flex-start;
-    background-color: #3a4e7a;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 6px 20px 0 rgba(0, 0, 0, 1);
-    border-radius: 1rem;
+  height: 15rem;
+  width: 45rem;
+  display: flex;
+  flex-direction: column;
+  flex-flow: wrap;
+  justify-content: space-around;
+  align-content: space-evenly;
+  align-items: flex-start;
+  background-color: #3a4e7a;
+  border-radius: 1rem;
 }
 
 .hasImg {
-    height: 29rem;
-    width: 45rem;
-    align-items: flex-start;
-    align-content: flex-start;
+  height: 29rem;
+  width: 45rem;
+  align-items: flex-start;
+  align-content: flex-start;
 }
 
 .carouselItem > img {
-    height: 250px;
-    width: 550px;
-    margin-top: 2rem;
-    border-radius: 1rem;
-    background-color: white;
-    padding: 1rem;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.35), 0 6px 20px 0 rgba(0, 0, 0, 0.35);
+  height: 250px;
+  width: 550px;
+  margin-top: 2rem;
+  border-radius: 1rem;
+  background-color: white;
+  padding: 1rem;
 }
 
 .carouselItem > h2 {
-    margin-top: 0.5rem;
-    border-radius: 0.5rem;
-    align-self: flex-start;
-    padding: 0.5rem;
-    background-color: #5e83ba;box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.35), 0 3px 10px 0 rgba(0, 0, 0, 0.35);
+  margin-top: 0.5rem;
+  border-radius: 0.5rem;
+  align-self: flex-start;
+  padding: 0.5rem;
+  background-color: #5e83ba;
 }
 
 .carouselItem > p {
-    
-    max-width: 80%;
+  max-width: 80%;
 }
 
 .hasImg > p {
-    margin-top: 1rem;
+  margin-top: 1rem;
 }
 
 .fa-arrow-circle-right {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .fa-arrow-circle-right > path {
-    fill:#5e83ba;
+  fill: #5e83ba;
 }
 
 .fa-arrow-circle-left {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .fa-arrow-circle-left > path {
-    fill:#5e83ba;
-}
-
-@media only screen and (max-width:1100px) {
-    .hasImg {
-        height: 30rem;
-        width: 97%;
-    }
-    .hasImg > p {
-        margin-top: 2rem;
-    }
-    .carousel {
-        margin-bottom: 15rem;
-    }
-    .carouselItem {
-        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 1), 0 3px 10px 0 rgba(0, 0, 0, 1);
-    }
+  fill: #5e83ba;
 }
 
 @media only screen and (max-width: 1100px) {
-    .carouselItem {
-        margin-right: 0.1em;
-    }
+  .hasImg {
+    height: 30rem;
+    width: 97%;
+  }
+  .hasImg > p {
+    margin-top: 2rem;
+  }
+  .carousel {
+    margin-bottom: 15rem;
+  }
+  .carouselItem {
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 1), 0 3px 10px 0 rgba(0, 0, 0, 1);
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+  .carouselItem {
+    margin-right: 0.1em;
+  }
 }
 
 @media only screen and (max-width: 900px) {
-    .hasImg > img {
-        width: 450px;
-    }
+  .hasImg > img {
+    width: 450px;
+  }
 }
 
 @media only screen and (max-width: 750px) {
-    .hasImg {
-        height: 32rem;
-    }
-    .hasImg > img {
-        width: 350px;
-    }
-    .hasImg > p {
-        margin-top: 2rem;
-    }
+  .hasImg {
+    height: 32rem;
+  }
+  .hasImg > img {
+    width: 350px;
+  }
+  .hasImg > p {
+    margin-top: 2rem;
+  }
 }
 
-@media only screen and (max-width:700px) {
-    .carousel {
-        margin-bottom: 8rem;
-    }
+@media only screen and (max-width: 700px) {
+  .carousel {
+    margin-bottom: 8rem;
+  }
 }
 
 @media only screen and (max-width: 600px) {
-    .carouselItem {
-        height: 20rem;
-    }
-    .hasImg {
-        height: 32rem;
-    }
-    .BrainhubCarouselItem {
-        padding: 4em;
-        padding-top: 0.5em;
-    }
-    .carousel {
-        width: 110%;
-    }
-    .hasImg > img {
-        padding: 5px;
-        width: 350px;
-    }
+  .carouselItem {
+    height: 20rem;
+  }
+  .hasImg {
+    height: 32rem;
+  }
+  .BrainhubCarouselItem {
+    padding: 4em;
+    padding-top: 0.5em;
+  }
+  .carousel {
+    width: 110%;
+  }
+  .hasImg > img {
+    padding: 0;
+    width: 350px;
+  }
 }
 
 @media only screen and (max-width: 500px) {
-    .carousel {
-        width: 120%;
-    }
+  .carousel {
+    width: 120%;
+  }
 }
 
-@media only screen and (max-width:450px) {
-    .hasImg {
-        height: 38rem;
-    }
-    .hasImg > img {
-        width: 275px;
-    }
+@media only screen and (max-width: 450px) {
+  .hasImg {
+    height: 38rem;
+  }
+  .hasImg > img {
+    width: 275px;
+  }
 }
