--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,14 +1,14 @@
 .contactContainer {
   /* position: -webkit-sticky; Safari */
-  position: sticky;
-  /* position: relative; */
+  /* position: sticky; */
+  position: relative;
   top: 0vh;
   display: flex;
   flex-flow: wrap;
   align-items: flex-start;
   height: 70%;
   border-radius: 1rem;
-  margin-bottom: 25rem;
+  margin-bottom: 15rem;
   background-color: #3a4e7a;
   
 }
