reworked gallery component

--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,28 @@ body {
   align-content: center;
   align-items: center;
 }
+
+@media only screen and (max-width: 500px) {
+  .App {
+    width: 95%;
+    margin: 2.5%;
+  }
+}
+
+.galleryTabs {
+  width: 100%; 
+  list-style: none;
+}
+
+.galleryTabs li {
+  width: 50%;
+  float: left;
+}
+
+.galleryTabs h2 {
+  align-self: flex-start;
+  cursor: pointer;
+  text-align: center;
+  border-radius: 1rem 1rem 0 0;
+  background-color: #2b3a5c;
+}
