--- a/src/components/galleries/gallery/gallery.css
+++ b/src/components/galleries/gallery/gallery.css
@@ -5,7 +5,7 @@
 	width: 70%;
 	padding: 1rem;
 	background-color: #3a4e7a;
-	border-radius: 1rem;
+	border-radius: 0 0 1rem 1rem;
 	overflow: hidden;
 	align-items: center;
 	margin-bottom: 5rem;
@@ -16,6 +16,14 @@
 	width: calc(50% - 4px);
 	position: relative;
 	overflow: hidden;
+}
+
+.ReactGridGallery img {
+	background-color: white;
+}
+
+.fullscreen img {
+	background-color: white;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -31,3 +39,4 @@
 		width: 100%;
 	}
 }
+
