progress on the contact component

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,13 @@ body {
   align-items: center;
 }
 
+@media only screen and (max-width: 1000px) {
+  .App {
+    width: 85%;
+    margin-left: 7.5%;
+  }
+}
+
 @media only screen and (max-width: 500px) {
   .App {
     width: 95%;
