--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -8,7 +8,6 @@
   align-items: flex-start;
   height: 70%;
   border-radius: 1rem;
-  
   margin-bottom: 15rem;
   background-color: #3a4e7a;
   
@@ -16,30 +15,28 @@
 
 #profile {
   border-radius: 1rem;
-  margin-right: 1rem;
   z-index: 99;
   height: 17rem;
   width: 17rem;
-  margin-left: 2rem;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  margin: 2rem 2rem 2rem 2rem;
   background-color: white;
 }
 
 .bio {
   display: flex;
+  margin-top: 2rem;
   flex-direction: column;
+  align-items: flex-start;
   justify-content: space-evenly;
   position: relative;
   height: 17rem;
   max-width: 100%;
-  max-height: 20rem;
   overflow: hidden;
-  margin-top: 2rem;
+  /* margin-top: 2rem; */
   color: white;
 }
 
-.bio p {
+.bio > p {
   margin-right: 2rem;
 }
 
@@ -60,7 +57,36 @@
   margin-right: 1rem;
 }
 
-@media only screen and (min-width: 1525px) {
+@media only screen and (max-width: 1000px) {
+  #profile {
+    margin: 0;
+    margin-top: 2rem;
+  }
+  .bio > p {
+    margin: 0;
+    width: 17rem;
+  }
+  .bio {
+    margin: 0;
+    justify-content: center;
+    align-items: center;
+  }
+  .contactContainer {
+    margin-bottom: 7rem;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .contactContainer {
+    align-items: center;
+    justify-content: center;
+  }
+  .contactSocial {
+    margin-top: 1rem;
+  }
+}
+
+/* @media only screen and (min-width: 1525px) {
   .bio {
     max-width: 70%;
   }
@@ -89,9 +115,9 @@
     margin-bottom: 2rem;
     max-width: 60%;
   }
-}
+} */
 
-@media only screen and (max-width: 775px) {
+/* @media only screen and (max-width: 775px) {
   #profile {
     margin-left: 6rem;
   }
@@ -100,9 +126,9 @@
     margin-bottom: 2rem;
     max-width: 80%;
   }
-}
+} */
 
-@media only screen and (max-width: 700px) {
+/* @media only screen and (max-width: 700px) {
   .contactContainer {
     margin-bottom: 12rem;
   }
@@ -112,9 +138,9 @@
   .bio {
     margin-left: 4em;
   }
-}
+} */
 
-@media only screen and (max-width: 575px) {
+/* @media only screen and (max-width: 575px) {
   #profile {
     margin-left: 2rem;
   }
@@ -123,9 +149,9 @@
     margin-bottom: 2rem;
     max-width: 80%;
   }
-}
+} */
 
-@media only screen and (max-width: 500px) {
+/* @media only screen and (max-width: 500px) {
   #profile {
     margin-left: 1em;
     margin-right: 1em;
@@ -134,4 +160,4 @@
     margin-left: 1em;
     margin-right: 1em;
   }
-}
+} */
