--- a/src/components/galleries/gallery/gallery.css
+++ b/src/components/galleries/gallery/gallery.css
@@ -1,8 +1,8 @@
 .ReactGridGallery {
 	display: flex;
 	flex-wrap: wrap;
-	height: 20rem;
-	width: 70%;
+	/* height: 20rem; */
+	width: 100%;
 	padding: 1rem;
 	background-color: #3a4e7a;
 	border-radius: 0 0 1rem 1rem;
@@ -20,6 +20,11 @@
 
 .ReactGridGallery img {
 	background-color: white;
+	width: 100%;
+	cursor: pointer;
+	max-width: 100%;
+	height: 15rem;
+	margin-bottom: 0;
 }
 
 .fullscreen img {
@@ -40,3 +45,21 @@
 	}
 }
 
+.galleryTabs {
+	width: 100%; 
+	list-style: none;
+  }
+  
+  .galleryTabs li {
+	width: 50%;
+	float: left;
+  }
+  
+  .galleryTabs h2 {
+	align-self: flex-start;
+	cursor: pointer;
+	text-align: center;
+	border-radius: 1rem 1rem 0 0;
+	background-color: #2b3a5c;
+  }
+  
