--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -32,7 +32,6 @@
   height: 17rem;
   max-width: 100%;
   overflow: hidden;
-  /* margin-top: 2rem; */
   color: white;
 }
 
@@ -57,9 +56,21 @@
   margin-right: 1rem;
 }
 
+@media only screen and (max-width: 1650px) {
+  .bio > p {
+    width: 30rem;
+  }
+}
+
+@media only screen and (max-width: 1250px) {
+  .bio > p {
+    width: 20rem;
+  }
+}
+
 @media only screen and (max-width: 1000px) {
   #profile {
-    margin: 0;
+    /* margin: 0; */
     margin-top: 2rem;
   }
   .bio > p {
@@ -68,11 +79,16 @@
   }
   .bio {
     margin: 0;
+    margin-right: 2rem;
+    margin-top: 2rem;
     justify-content: center;
     align-items: center;
   }
   .contactContainer {
     margin-bottom: 7rem;
+  }
+  .contactSocial {
+    margin-top: 1rem;
   }
 }
 
@@ -80,8 +96,5 @@
   .contactContainer {
     align-items: center;
     justify-content: center;
-  }
-  .contactSocial {
-    margin-top: 1rem;
   }
 }
