--- a/src/components/galleries/gallery/gallery.css
+++ b/src/components/galleries/gallery/gallery.css
@@ -1,64 +1,75 @@
 .ReactGridGallery {
-	display: flex;
-	flex-wrap: wrap;
-	width: 100%;
-	padding: 1rem;
-	background-color: #3a4e7a;
-	border-radius: 0 0 1rem 1rem;
-	overflow: hidden;
-	align-items: center;
-	margin-bottom: 5rem;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  padding: 1rem;
+  background-color: #3a4e7a;
+  border-radius: 0 0 1rem 1rem;
+  overflow: hidden;
+  align-items: center;
+  margin-bottom: 5rem;
 }
 
 .ReactGridGallery > div {
-	margin-right: 0.25rem;
-	width: calc(50% - 4px);
-	position: relative;
-	overflow: hidden;
+  margin-right: 0.25rem;
+  width: calc(50% - 4px);
+  position: relative;
+  overflow: hidden;
 }
 
 .ReactGridGallery img {
-	background-color: white;
-	width: 100%;
-	cursor: pointer;
-	max-width: 100%;
-	height: 15rem;
-	margin-bottom: 0;
+  background-color: white;
+  width: 100%;
+  cursor: pointer;
+  max-width: 100%;
+  height: 15rem;
+  margin-bottom: 0;
 }
 
 .fullscreen img {
-	background-color: white;
-}
-
-@media only screen and (max-width: 1000px) {
-	.ReactGridGallery {
-		flex-direction: column;
-		flex-wrap: nowrap;
-		height: 40rem;
-		width: 100%;
-	}
-	.ReactGridGallery > div {
-		margin-right: 0;
-		margin-bottom: 0.25rem;
-		width: 100%;
-	}
+  background-color: white;
 }
 
 .galleryTabs {
-	width: 100%; 
-	list-style: none;
+  width: 100%;
+  list-style: none;
+}
+
+.galleryTabs li {
+  width: 50%;
+  float: left;
+}
+
+.galleryTabs h2 {
+  align-self: flex-start;
+  cursor: pointer;
+  text-align: center;
+  border-radius: 1rem 1rem 0 0;
+  background-color: #2b3a5c;
+}
+
+@media only screen and (max-width: 1000px) {
+  .ReactGridGallery {
+    flex-direction: column;
+    flex-wrap: nowrap;
+    width: 100%;
   }
-  
-  .galleryTabs li {
-	width: 50%;
-	float: left;
+  .ReactGridGallery > div {
+    margin-right: 0;
+    margin-bottom: 0.25rem;
+    width: 100%;
+    height: 20rem;
   }
-  
-  .galleryTabs h2 {
-	align-self: flex-start;
-	cursor: pointer;
-	text-align: center;
-	border-radius: 1rem 1rem 0 0;
-	background-color: #2b3a5c;
+  .ReactGridGallery img {
+    height: 20rem;
   }
-  
+}
+
+@media only screen and (max-width: 550px) {
+	.ReactGridGallery > div {
+    height: 15rem;
+  }
+  .ReactGridGallery img {
+    height: 15rem;
+  }
+}
