--- a/src/components/galleries/gallery/gallery.css
+++ b/src/components/galleries/gallery/gallery.css
@@ -24,6 +24,7 @@
   max-width: 100%;
   height: 15rem;
   margin-bottom: 0;
+  z-index: 98;
 }
 
 .fullscreen img {
@@ -47,6 +48,26 @@
   border-radius: 1rem 1rem 0 0;
   background-color: #2b3a5c;
 }
+
+.ReactGridGallery p {
+  cursor: pointer;
+  position: absolute;
+  z-index: 99;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.ReactGridGallery img:hover {
+  opacity: 0.25;
+}
+
+.ReactGridGallery img:hover + p {
+  visibility: visible;
+}
+
 
 @media only screen and (max-width: 1000px) {
   .ReactGridGallery {
